Fix text boxes not working on Safari Mac/iOS

--- a/less/bureau-reset.less
+++ b/less/bureau-reset.less
@@ -38,6 +38,10 @@ textarea {
 	font-weight: normal;
 }
 
+input, textarea {
+	.user-select(text);
+}
+
 p, h1, h2, h3, h4, h5, h6 {
 	padding: 0;
 	margin: 0;
